--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@types/three": "^0.152.1",
     "ant-design-vue": "^3.2.20",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
     "echarts": "^5.4.2",
     "lodash": "^4.17.21",
     "pinia": "^2.0.32",
@@ -42,12 +44,14 @@
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
+    "mockjs": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "sass": "^1.62.1",
     "typescript": "~4.8.4",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
+    "vite-plugin-mock": "2.9.6",
     "vite-plugin-vue-images": "^0.6.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vitest": "^0.29.1",
