--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "three": "^0.152.1",
     "tween.js": "^16.6.0",
     "uuid": "^9.0.0",
-    "vue": "^3.2.47",
+    "vue": "^3.3.4",
+    "vue-request": "^2.0.3",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
+    "axios-mock-adapter": "^1.21.5",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
