--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
   "files": [],
   "references": [
     {
-      "path": "./tsconfig.node.json"
+      "path": "./tsconfig.node.json",
     }
   ]
 }
