--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@types/three": "^0.152.1",
+    "@vueuse/motion": "^2.0.0",
     "ant-design-vue": "^3.2.20",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
@@ -54,6 +55,7 @@
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
     "vite-plugin-mock": "2.9.6",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-images": "^0.6.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vitest": "^0.29.1",
