--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@types/three": "^0.152.1",
+    "@vueuse/core": "^10.2.1",
     "@vueuse/motion": "^2.0.0",
     "ant-design-vue": "^3.2.20",
     "axios": "^1.4.0",
